# tinyurl

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .pylintrc  .yamllint  Dockerfile.backend  Dockerfile.frontend  Dockerfile.gateway  README.md  docker-compose.yaml  pytest.ini  renovate.json  run-lint.sh  run-markdown-lint.sh  run-renovate-local.sh  run-tests.sh  run-ui-docker.sh  run-ui-tests.sh  run-yaml-lint.sh
.github/: copilot-instructions.md
.github/workflows/: branch-policy.yml  ci.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/src/adapters/db/: models.py  repository.py  session.py
backend/src/api/: app.py  deps.py  schemas.py
backend/src/domain/: __init__.py  constants.py  entities.py  errors.py  id_token.py  ports.py  validators.py
backend/tests/: conftest.py  test_api_crud.py  test_id_token.py  test_repository_mongo.py  test_repository_sqlite.py  test_validators.py
backend/tests/.tmp/: links.db
data/: links.db
docs/: ARCHITECTURE.md  REQUIREMENTS.md  branch-naming-convention.md
frontend/: nginx.conf
frontend/ui/: README-01KA6CF9XAVZE8YS0SQBFWEFDK.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/ui/e2e/: create-link.spec.ts  delete-link.spec.ts  edit-link.spec.ts  fixtures.ts  navigation.spec.ts  test-redirect.spec.ts
frontend/ui/src/: App.svelte  main.ts  style.css  vite-env.d.ts
frontend/ui/src/lib/: api.ts
gateway/: entrypoint.sh  nginx.conf.template
gateway/include/: block-exploits.conf  security-headers-docs.conf  security-headers.conf
