[project]
name = "tinyurl-backend"
version = "0.1.0"
description = "MVP TinyURL backend (FastAPI + SQLite)"
authors = [ { name = "TinyURL" } ]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.110.0",
  "uvicorn==0.30.0",
  "pydantic==2.6.0",
  "SQLAlchemy==2.0.29",
  "aiosqlite==0.19.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "black>=24.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
